--- a/model/ml/typing-rules.tex
+++ b/model/ml/typing-rules.tex
@@ -13,7 +13,7 @@
 % x
 \frac
 {}
-{\judtm{\envextt{\tyvarm}}{\tyvarm}}
+{\judtm{\envextt{\env}{\tyvarm}}{\tyvarm}}
 \]
 \[
 % {t}
@@ -35,12 +35,12 @@
 \[
 % \x:t.e
 \frac
-{\judtm{\env}{\first{\vartym}} \quad \judem{\envexte{\varvarm}{\first{\vartym}}}{\varexpm}{\second{\vartym}}}
+{\judtm{\env}{\first{\vartym}} \quad \judem{\envexte{\env}{\varvarm}{\first{\vartym}}}{\varexpm}{\second{\vartym}}}
 {\judem{\env}{(\expfabss{\varvarm}{\first{\vartym}}{\varexpm})}{\tyfun{\first{\vartym}}{\second{\vartym}}}}
 \quad
 % \\u.e
 \frac
-{\judem{\envextt{\tyvarm}}{\varexpm}{\vartym}}
+{\judem{\envextt{\env}{\tyvarm}}{\varexpm}{\vartym}}
 {\judem{\env}{\exptabs{\tyvarm}{\varexpm}}{\tyfor{\tyvarm}{\vartym}}}
 \quad
 % n
@@ -62,7 +62,7 @@
 % x
 \frac
 {}
-{\judem{\envexte{\varvarm}{\vartym}}{\varvarm}{\vartym}}
+{\judem{\envexte{\env}{\varvarm}{\vartym}}{\varvarm}{\vartym}}
 \]
 \[
 % e e
