--- a/model/scheme/typing-rules.tex
+++ b/model/scheme/typing-rules.tex
@@ -9,7 +9,7 @@
 \[
 % \x.e
 \frac
-{\judes{\envexte{\varvars}{\tytst}}{\varexps}{\tytst}}
+{\judes{\envexte{\env}{\varvars}{\tytst}}{\varexps}{\tytst}}
 {\judes{\env}{\expfabsd{\varvars}{\varexps}}{\tytst}}
 \quad
 % n
@@ -31,7 +31,7 @@
 % x
 \frac
 {}
-{\judes{\envexte{\varvars}{\tytst}}{\varvars}{\tytst}}
+{\judes{\envexte{\env}{\varvars}{\tytst}}{\varvars}{\tytst}}
 \]
 \[
 % e e
