--- a/proof/preservation/haskell.tex
+++ b/proof/preservation/haskell.tex
@@ -16,10 +16,10 @@ By cases on the reduction \redrule{\first{\varexph}}{\second{\varexph}} and lemm
 {\judeh{}{\osfapplh}{\second{\vartyh}}}
 \pntypes
 {
-\judeh{}{\expfabss{\first{\varvarh}}{\first{\vartyh}}{\first{\varexph}}}{\tyfun{\first{\vartyh}}{\second{\vartyh}}},
-\judeh{\envexte{\first{\varvarh}}{\first{\vartyh}}}{\first{\varexph}}{\second{\vartyh}},
-\judeh{}{\second{\varexph}}{\first{\vartyh}},
-\judeh{\envexte{\first{\varvarh}}{\first{\vartyh}}}{\first{\varvarh}}{\first{\vartyh}}, and
+\judeh{}{\expfabss{\first{\varvarh}}{\first{\vartyh}}{\first{\varexph}}}{\tyfun{\first{\vartyh}}{\second{\vartyh}}};
+\judeh{\envexte{\envempty}{\first{\varvarh}}{\first{\vartyh}}}{\first{\varexph}}{\second{\vartyh}};
+\judeh{}{\second{\varexph}}{\first{\vartyh}};
+\judeh{\envexte{\envempty}{\first{\varvarh}}{\first{\vartyh}}}{\first{\varvarh}}{\first{\vartyh}}; and
 $\first{\vartyh} = \third{\vartyh}$
 }
 
