--- a/macros.tex
+++ b/macros.tex
@@ -9,6 +9,7 @@
 \newcommand{\symcsvar}{u}
 \newcommand{\symenv}{\Gamma}
 \newcommand{\symlumpeq}{\doteq}
+\newcommand{\symempty}{\emptyset}
 \newcommand{\symexp}{e}
 \newcommand{\symext}{,}
 \newcommand{\symhasty}{:}
@@ -159,8 +160,9 @@
 \newcommand{\judtm}[2]{\ensuremath{#1 \symjudm #2}}
 \newcommand{\judts}[2]{\ensuremath{#1 \symjuds #2}}
 \newcommand{\env}{\ensuremath{\symenv}}
-\newcommand{\envexte}[2]{\ensuremath{\symenv \symext #1 \symhasty #2}}
-\newcommand{\envextt}[1]{\ensuremath{\symenv \symext #1}}
+\newcommand{\envempty}{\ensuremath{\symempty}}
+\newcommand{\envexte}[3]{\ensuremath{#1 \symext #2 \symhasty #3}}
+\newcommand{\envextt}[2]{\ensuremath{#1 \symext #2}}
 
 % Reduction rules
 
