--- a/proof/preservation/haskell.tex
+++ b/proof/preservation/haskell.tex
@@ -10,7 +10,7 @@ By cases on the reduction \redrule{\first{\varexph}}{\second{\varexph}} and lemm
 
 % e e
 
-\begin{case}{\osfappph}
+\begin{case}{\osfapph}
 
 \pnpremise
 {\judeh{}{\osfapplh}{\second{\vartyh}}}
