Revised the H pn proof to use eval cxts.

--- a/proof/preservation/haskell.tex
+++ b/proof/preservation/haskell.tex
@@ -2,11 +2,11 @@
 
 \label{thmpnh}
 
-If \judeh{}{\first{\varexph}}{\first{\vartyh}} and \redrule{\first{\varexph}}{\second{\varexph}} then \judeh{}{\second{\varexph}}{\first{\vartyh}}.
+If \judeh{\env}{\first{\varexph}}{\first{\vartyh}} and \redruleh{\first{\varexph}}{\second{\varexph}} then \judeh{\env}{\second{\varexph}}{\first{\vartyh}}.
 
 \begin{proof}
 
-By cases on the reduction \redrule{\first{\varexph}}{\second{\varexph}} and lemma \ref{lemeva}.
+By cases on the reduction \redruleh{\first{\varexph}}{\second{\varexph}} and lemma \ref{lemeva}.
 
 % e e
 
