Minor pn macro rewording and renaming. Revised the pn H tapp case to use the macros.

--- a/macros.tex
+++ b/macros.tex
@@ -259,11 +259,10 @@
 
 % Preservation
 
-\newcommand{\pnpremise}[1]{#1 by premise and lemma \ref{lemuni}.}
+\newcommand{\pnpremise}[1]{#1 by the premise and lemma \ref{lemuni}.}
 \newcommand{\pntypes}[1]{#1 by lemmas \ref{leminv} and \ref{lemuni}.}
 \newcommand{\pnexpsubst}[1]{#1 by lemma \ref{lemexp}.}
-\newcommand{\pntypsubst}[1]{#1 by lemma \ref{lemtyp}.}
-\newcommand{\pnbc}[2]{#1 because #2.}
+\newcommand{\pntysubst}[1]{#1 by lemma \ref{lemtyp}.}
 
 % Temporary
 
