--- a/proof/preservation/haskell.tex
+++ b/proof/preservation/haskell.tex
@@ -13,29 +13,34 @@ By cases on the reduction \redruleh{\first{\varexph}}{\second{\varexph}} and lem
 \begin{case}{\osfapph}
 
 \pnpremise
-{\judeh{}{\osfapplh}{\second{\vartyh}}}
+{\judeh{\env}{\osfapplh}{\second{\vartyh}}}
 \pntypes
 {
-\judeh{}{\expfabss{\first{\varvarh}}{\first{\vartyh}}{\first{\varexph}}}{\tyfun{\first{\vartyh}}{\second{\vartyh}}};
-\judeh{\envexte{\envempty}{\first{\varvarh}}{\first{\vartyh}}}{\first{\varexph}}{\second{\vartyh}};
-\judeh{}{\second{\varexph}}{\first{\vartyh}};
-\judeh{\envexte{\envempty}{\first{\varvarh}}{\first{\vartyh}}}{\first{\varvarh}}{\first{\vartyh}}; and
-$\first{\vartyh} = \third{\vartyh}$
+\judeh{\env}{\expfabss{\first{\varvarh}}{\first{\vartyh}}{\first{\varexph}}}{\tyfun{\first{\vartyh}}{\second{\vartyh}}};
+\judeh{\envexte{\env}{\first{\varvarh}}{\first{\vartyh}}}{\first{\varexph}}{\second{\vartyh}};
+\judeh{\env}{\second{\varexph}}{\first{\vartyh}}; and
+\judeh{\envexte{\env}{\first{\varvarh}}{\first{\vartyh}}}{\first{\varvarh}}{\first{\vartyh}}
 }
+\pnexpsubst
+{\judeh{\env}{\osfapprh}{\second{\vartyh}}}
 
-
-$(\lambda x:T_{1}.e_{A}^{1})$ $e_{A}^{2}\rightarrow e_{A}^{1}[e_{A}^{2}/x]$ where $A\in\lbrace H,M\rbrace$
-
-$\Gamma\vdash_{A}(\lambda x:T_{1}.e_{A}^{1})$ $e_{A}^{2}:T$ by premise and uniqueness of types (Lemma \ref{uot}).  $\Gamma\vdash_{A}\lambda x:T_{1}.e_{A}^{1}:T_{1}\rightarrow T_{2}$, $\Gamma,x:T_{1}\vdash_{A}e_{A}^{1}:T_{2}$, $\Gamma\vdash_{A}e_{A}^{2}:T_{1}$, $\Gamma,x:T_{1}\vdash_{A}x:T_{1}$, and $T=T_{2}$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\Gamma\vdash_{A}e_{A}^{1}[e_{A}^{2}/x]:T_{2}$ by term substitution (Lemma \ref{tms}).  $\Gamma\vdash_{A}e_{A}^{1}[e_{A}^{2}/x]:T$ because $T_{2}=T$.
 \end{case}
 
 % e<t>
 
 \begin{case}{\ostapp}
 
-$(\Lambda X.e_{A})$ $\lbrace T_{1}\rbrace\rightarrow e_{A}[T_{1}/X]$ where $A\in\lbrace H,M\rbrace$
+\pnpremise
+{\judeh{\env}{\ostappl}{\second{\vartyh}}}
+\pntypes
+{
+\judeh{\env}{\exptabs{\first{\tyvarh}}{\first{\varexph}}}{\tyfor{\first{\tyvarh}}{\third{\vartyh}}};
+\judeh{\envextt{\env}{\first{\tyvarh}}}{\first{\varexph}}{\third{\vartyh}}; and
+\second{\vartyh} $=$ \tysubst{\third{\vartyh}}{\first{\vartyh}}{\first{\tyvarh}}
+}
+\pntysubst
+{\judeh{\env}{\ostappr}{\tysubst{\third{\vartyh}}{\first{\vartyh}}{\first{\tyvarh}}}}
 
-$\Gamma\vdash_{A}(\Lambda X.e_{H})$ $\lbrace T_{1}\rbrace:T$ by premise and uniqueness of types (Lemma \ref{uot}).  $\Gamma\vdash_{A}\Lambda X.e_{A}:\forall X.T_{2}$, $\Gamma,X\vdash_{A}e_{A}:T_{2}$, and $T=T_{2}[T_{1}/X]$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\Gamma\vdash_{A}e_{A}[T_{1}/X]:T_{2}[T_{1}/X]$ by type substitution (Lemma \ref{tes}).  $\Gamma\vdash_{A}e_{A}[T_{1}/X]:T$ because $T_{2}[T_{1}/X]=T$.
 \end{case}
 
 % fix e
