--- a/proof/preservation/haskell.tex
+++ b/proof/preservation/haskell.tex
@@ -47,61 +47,104 @@ By cases on the reduction \redruleh{\first{\varexph}}{\second{\varexph}} and lem
 
 \begin{case}{\osfix}
 
-$\mathtt{fix}$ $(\lambda x:T_{1}.e_{A})\rightarrow e_{A}[(\mathtt{fix}$ $(\lambda x:T_{1}.e_{A}))/x]$ where $A\in\lbrace H,M\rbrace$
+\pnpremise
+{\judeh{\env}{\osfixl}{\second{\vartyh}}}
+\pntypes
+{
+\judeh{\env}{(\expfabss{\first{\varvarh}}{\first{\vartyh}}{\first{\varexph}})}{\tyfun{\first{\vartyh}}{\second{\vartyh}}} and
+\judeh{\envexte{\env}{\first{\varvarh}}{\first{\vartyh}}}{\first{\varexph}}{\second{\vartyh}}
+}
+\pnexpsubst
+{\judeh{\env}{\osfixr}{\second{\vartyh}}}
 
-$\Gamma\vdash_{A}\mathtt{fix}$ $(\lambda x:T_{1}.e_{A}):T$ by premise and uniqueness of types (Lemma \ref{uot}).  $\Gamma\vdash_{A}\lambda x:T_{1}.e_{A}:T_{1}\rightarrow T_{2}$, $\Gamma,x:T_{1}\vdash_{A}e_{A}:T_{1}$, $\Gamma,x:T_{1}\vdash_{A}x:T_{1}$, and $T=T_{1}$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\Gamma\vdash_{A}e_{A}[(\mathtt{fix}$ $(\lambda x:T_{1}.e_{A}))/x]:T_{1}$ by term substitution (Lemma \ref{tms}).  $\Gamma\vdash_{A}e_{A}[(\mathtt{fix}$ $(\lambda x:T_{1}.e_{A}))/x]:T$ because $T_{1}=T$.
 \end{case}
 
 % + n n
 
 \begin{case}{\osadd}
-$+$ $\overline{n_{1}}$ $\overline{n_{2}}\rightarrow\overline{n_{1}+n_{2}}$ where $A\in\lbrace H,M\rbrace$
 
-$\vdash_{A}+$ $\overline{n_{1}}$ $\overline{n_{2}}:T$ by premise and uniqueness of types (Lemma \ref{uot}).  $\vdash_{A}\overline{n_{1}}:N$, $\vdash_{A}\overline{n_{2}}:N$, $T=N$, and $\vdash_{A}\overline{n_{1}+n_{2}}:N$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\vdash_{A}\overline{n_{1}+n_{2}}:T$ because $N=T$.
+\pnpremise
+{\judeh{}{\osaddl}{\first{\vartyh}}}
+\pntypes
+{
+\judeh{}{\first{\expnum{\varnum}}}{\tynum},
+\judeh{}{\second{\expnum{\varnum}}}{\tynum},
+\first{\vartyh} $=$ \tynum, and
+\judeh{}{\osaddr}{\tynum}
+}
+
 \end{case}
 
 % - n n
 
 \begin{case}{\ossub}
-$-$ $\overline{n_{1}}$ $\overline{n_{2}}\rightarrow\overline{max(n_{1}-n_{2},0)}$ where $A\in\lbrace H,M\rbrace$
 
-$\vdash_{A}-$ $\overline{n_{1}}$ $\overline{n_{2}}:T$ by premise and uniqueness of types (Lemma \ref{uot}).  $\vdash_{A}\overline{n_{1}}:N$, $\vdash_{A}\overline{n_{2}}:N$, $T=N$, and $\vdash_{A}\overline{max(n_{1}-n_{2},0)}:N$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\vdash_{A}\overline{max(n_{1}-n_{2},0)}:T$ because $N=T$.
+\pnpremise
+{\judeh{}{\ossubl}{\first{\vartyh}}}
+\pntypes
+{
+\judeh{}{\first{\expnum{\varnum}}}{\tynum},
+\judeh{}{\second{\expnum{\varnum}}}{\tynum},
+\first{\vartyh} $=$ \tynum, and
+\judeh{}{\ossubr}{\tynum}
+}
+
 \end{case}
 
 % if0 0 e e
 
 \begin{case}{\osiftrue}
 
-$\mathtt{if0}$ $\overline{0}$ $e_{A}^{1}$ $e_{A}^{2}\rightarrow e_{A}^{1}$ where $A\in\lbrace H,M\rbrace$
+\pnpremise
+{\judeh{\env}{\osiftruel}{\first{\vartyh}}}
+\pntypes
+{
+\judeh{\env}{\osiftruer}{\first{\vartyh}}
+}
 
-$\Gamma\vdash_{A}\mathtt{if0}$ $\overline{0}$ $e_{A}^{1}$ $e_{A}^{2}:T$ by premise and uniqueness of types (Lemma \ref{uot}).  $\Gamma\vdash_{A}e_{A}^{1}:T_{1}$ and $T=T_{1}$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\Gamma\vdash_{A}e_{A}^{1}:T$ because $T_{1}=T$.
 \end{case}
 
 % if0 n e e
 
 \begin{case}{\osiffalse}
 
-$\mathtt{if0}$ $\overline{n}$ $e_{A}^{1}$ $e_{A}^{2}\rightarrow e_{A}^{2}$ $(n\neq0)$ where $A\in\lbrace H,M\rbrace$
+\pnpremise
+{\judeh{\env}{\osiffalsel}{\first{\vartyh}}}
+\pntypes
+{
+\judeh{\env}{\osiffalser}{\first{\vartyh}}
+}
 
-$\Gamma\vdash_{A}\mathtt{if0}$ $\overline{n}$ $e_{A}^{1}$ $e_{A}^{2}:T$ by premise and uniqueness of types (Lemma \ref{uot}).  $\Gamma\vdash_{A}e_{A}^{2}:T_{1}$ and $T=T_{1}$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\Gamma\vdash_{A}e_{A}^{2}:T$ because $T_{1}=T$.
 \end{case}
 
 % hd nil
 
 \begin{case}{\oshdnil}
 
-$\mathtt{hd}$ $\mathtt{nil}^{T_{1}}\rightarrow\mathtt{wrong}^{T_{1}}$ \emph{``Empty list"} where $A\in\lbrace H,M\rbrace$
+\pnpremise
+{\judeh{\env}{\oshdnill}{\second{\vartyh}}}
+\pntypes
+{
+\judeh{\env}{\expnils{\first{\vartyh}}}{\tylist{\first{\vartyh}}},
+\second{\vartyh} $=$ \first{\vartyh}, and
+\judeh{\env}{\oshdnilr}{\first{\vartyh}}
+}
 
-$\Gamma\vdash_{A}\mathtt{hd}$ $\mathtt{nil}^{T_{1}}:T$ by premise and uniqueness of types (Lemma \ref{uot}).  $\Gamma\vdash_{A}\mathtt{nil}^{T_{1}}:[T_{1}]$, $T=T_{1}$, and $\Gamma\vdash_{A}\mathtt{wrong}^{T_{1}}$ $\mathrm{``Empty}$ $\mathrm{list"}:T_{1}$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\Gamma\vdash_{A}\mathtt{wrong}^{T_{1}}$ $\mathrm{``Empty}$ $\mathrm{list"}:T$ because $T_{1}=T$.
 \end{case}
 
 % tl nil
 
 \begin{case}{\ostlnil}
 
-$\mathtt{tl}$ $\mathtt{nil}^{T_{1}}\rightarrow\mathtt{wrong}^{[T_{1}]}$ \emph{``Empty list"} where $A\in\lbrace H,M\rbrace$
+\pnpremise
+{\judeh{\env}{\ostlnill}{\second{\vartyh}}}
+\pntypes
+{
+\judeh{\env}{\expnils{\first{\vartyh}}}{\tylist{\first{\vartyh}}},
+\second{\vartyh} $=$ \tylist{\first{\vartyh}}, and
+\judeh{\env}{\ostlnilr}{\tylist{\first{\vartyh}}}
+}
 
-$\Gamma\vdash_{A}\mathtt{tl}$ $\mathtt{nil}^{T_{1}}:T$ by premise and uniqueness of types (Lemma \ref{uot}).  $\Gamma\vdash_{A}\mathtt{nil}^{T_{1}}:[T_{1}]$, $T=[T_{1}]$, and $\Gamma\vdash_{A}\mathtt{wrong}^{[T_{1}]}$ $\mathrm{``Empty}$ $\mathrm{list"}:[T_{1}]$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\Gamma\vdash_{A}\mathtt{wrong}^{[T_{1}]}$ $\mathrm{``Empty}$ $\mathrm{list"}:T$ because $[T_{1}]=T$.
 \end{case}
 
 % hd (cons e e)
