--- a/proof/progress/haskell.tex
+++ b/proof/progress/haskell.tex
@@ -6,7 +6,7 @@ If \judeh{}{\first{\varexph}}{\vartyh} then \pshyp{\first{\varexph}}{\second{\va
 
 \begin{proof}
 
-By structural induction on \first{\varexph}.
+By structural induction on \first{\varexph} and theorems \ref{thmpsm} and \ref{thmpss}.
 
 % x
 
