--- a/proof/progress/ml.tex
+++ b/proof/progress/ml.tex
@@ -6,7 +6,7 @@ If \judem{}{\first{\varexpm}}{\vartym} then \pshyp{\first{\varexpm}}{\second{\va
 
 \begin{proof}
 
-By structural induction on \first{\varexpm}.  Cases similar to Haskell cases are omitted.
+By structural induction on \first{\varexpm} and theorems \ref{thmpsh} and \ref{thmpss}.  Cases similar to Haskell cases are omitted.
 
 % mh t t e
 
