--- a/proof/progress/scheme.tex
+++ b/proof/progress/scheme.tex
@@ -6,7 +6,7 @@ If \judes{}{\first{\varexps}}{\tytst} then \pshyp{\first{\varexps}}{\second{\var
 
 \begin{proof}
 
-By structural induction on \first{\varexps}.  Cases similar to Haskell and ML cases are omitted.
+By structural induction on \first{\varexps} and theorems \ref{thmpsh} and \ref{thmpsm}.  Cases similar to Haskell and ML cases are omitted.
 
 % TODO:
 % sh k e
